--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,18 @@ authors = ["Colerar <233hbj@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0"
+byteorder = "1.4.3"
 cookie_store = "0.19.0"
 directories = "4.0"
 either = { version = "*", features = ["serde"] }
+futures-core = "0.3.26"
+futures-util = "0.3.26"
+flate2 = "1.0.25"
 indoc = "2.0.0"
 log = "0.4"
+num = "0.4.0"
+num-derive = "0.3.3"
+num-traits = "0.2.15"
 once_cell = "1.17.0"
 parking_lot = "0.12.1"
 paste = "1.0"
@@ -22,14 +29,18 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_repr = "0.1"
 serde_with = "2.2.0"
+strum = "0.24"
+strum_macros = "0.24"
+thiserror = "1.0"
+url = "2.3"
 
 [dependencies.tokio-tungstenite]
 version = "*"
-features = ["rustls-tls-native-roots"]
+features = ["connect", "rustls-tls-native-roots"]
 
 [dependencies.tokio]
-version = "1.24.1"
-features = ["rt-multi-thread", "macros", "parking_lot"]
+version = "1.25.0"
+features = ["net", "rt-multi-thread", "macros", "parking_lot"]
 
 [dependencies.reqwest]
 version = "0.11.14"
@@ -44,3 +55,6 @@ features = [
   "gzip",
   "deflate",
 ]
+
+[dev-dependencies]
+hex = "0.4"
