--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ byteorder = "1.4.3"
 cookie_store = "0.19.0"
 directories = "4.0"
 either = { version = "*", features = ["serde"] }
+flate2 = "1.0.25"
 futures-core = "0.3.26"
 futures-util = "0.3.26"
-flate2 = "1.0.25"
+hex = "0.4.3"
 indoc = "2.0.0"
 log = "0.4"
 num = "0.4.0"
@@ -32,6 +33,7 @@ serde_with = "2.2.0"
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1.0"
+time = "0.3.19"
 url = "2.3"
 
 [dependencies.tokio-tungstenite]
