--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Colerar <233hbj@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0"
+brotli = "3.3.4"
 byteorder = "1.4.3"
 cookie_store = "0.19.0"
 directories = "4.0"
@@ -33,7 +34,7 @@ serde_with = "2.2.0"
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1.0"
-time = "0.3.19"
+time = { version = "0.3.19", features = ["serde"] }
 url = "2.3"
 
 [dependencies.tokio-tungstenite]
