--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,63 +1,9 @@
-[package]
-name = "plutus"
-version = "0.1.0"
-edition = "2021"
-license = "MIT"
-authors = ["Colerar <233hbj@gmail.com>"]
+[workspace]
+members = ["plutus-core", "plutus"]
+resolver = "2"
 
-[dependencies]
-anyhow = "1.0"
-brotli = "3.3.4"
-byteorder = "1.4.3"
-cookie_store = "0.19.0"
-directories = "4.0"
-either = { version = "*", features = ["serde"] }
-flate2 = "1.0.25"
-futures-core = "0.3.26"
-futures-util = "0.3.26"
-hex = "0.4.3"
-indoc = "2.0.0"
-log = "0.4"
-num = "0.4.0"
-num-derive = "0.3.3"
-num-traits = "0.2.15"
-once_cell = "1.17.0"
-parking_lot = "0.12.1"
-paste = "1.0"
-pretty_env_logger = "0.4.0"
-qr2term = "0.3"
-reqwest_cookie_store = "0.5.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_repr = "0.1"
-serde_with = "2.2.0"
-strum = "0.24"
-strum_macros = "0.24"
-thiserror = "1.0"
-time = { version = "0.3.19", features = ["serde"] }
-url = "2.3"
-
-[dependencies.tokio-tungstenite]
-version = "*"
-features = ["connect", "rustls-tls-native-roots"]
-
-[dependencies.tokio]
-version = "1.25.0"
-features = ["net", "rt-multi-thread", "macros", "parking_lot"]
-
-[dependencies.reqwest]
-version = "0.11.14"
-features = [
-  "rustls-tls-native-roots",
-  "cookies",
-  "json",
-  # Proxy
-  "socks",
-  # Compression
-  "brotli",
-  "gzip",
-  "deflate",
-]
-
-[dev-dependencies]
-hex = "0.4"
+[profile.release]
+opt-level = 3
+lto = "thin"
+strip = "symbols"
+panic = "abort"
