--- a/plutus/Cargo.toml
+++ b/plutus/Cargo.toml
@@ -8,14 +8,19 @@ authors = ["Colerar <233hbj@gmail.com>"]
 [dependencies]
 ahash = "0.8.6"
 anyhow = "1.0.75"
-axum = "0.6.20"
+axum = "0.7"
 bb8 = "0.8.1"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.8", features = ["cargo", "derive", "wrap_help"] }
 plutus-core = { path = "../plutus-core", package = "plutus-core" }
 dashmap = "5.5.3"
 diesel = { version = "2.1.4", features = ["chrono", "serde_json"] }
-diesel-async = { version = "0.4.1", features = ["bb8", "postgres"] }
+diesel-async = { version = "0.4.1", features = [
+  "bb8",
+  "tokio",
+  "postgres",
+  "async-connection-wrapper",
+] }
 either = "1.9.0"
 futures = "0.3.29"
 futures-core = "0.3.29"
@@ -34,9 +39,10 @@ tokio = { version = "1.34.0", features = [
   "rt-multi-thread",
 ] }
 toml = "0.8.8"
-tower-http = { version = "0.4.4", features = ["compression-full", "timeout"] }
+tower-http = { version = "0.5", features = ["compression-full", "timeout"] }
 termimad = "0.26.1"
 terminal-link = "0.1.0"
+diesel_migrations = "2.1.0"
 
 [dependencies.reqwest]
 version = "0.11.16"
