feat: update dependencies

--- a/plutus-core/Cargo.toml
+++ b/plutus-core/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "plutus-core"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 license = "MIT"
 authors = ["Colerar <233hbj@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0"
-brotli = "3.3.4"
+brotli = "7"
 byteorder = "1.4.3"
-cookie_store = "0.20"
-directories = "5.0"
+bytes = "1.10.1"
+cookie_store = { version = "0.21", features = ["serde", "serde_json"]}
+directories = "6"
 either = { version = "1.8.1", features = ["serde"] }
 flate2 = "1.0.25"
 futures-core = "0.3.28"
@@ -24,19 +25,19 @@ num-traits = "0.2.15"
 once_cell = "1.17.1"
 parking_lot = "0.12.1"
 paste = "1.0"
-reqwest_cookie_store = "0.6"
+reqwest_cookie_store = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_repr = "0.1.12"
 serde_with = "3"
-strum = "0.25"
-strum_macros = "0.25"
-thiserror = "1.0.40"
+strum = "0.27"
+strum_macros = "0.27"
+thiserror = "2"
 time = { version = "0.3.20", features = ["serde"] }
 url = "2.3.1"
 
 [dependencies.tokio-tungstenite]
-version = "0.20"
+version = "0.26"
 default-features = false
 features = ["connect", "rustls-tls-native-roots"]
 
@@ -46,7 +47,7 @@ default-features = false
 features = ["net", "rt-multi-thread", "macros", "parking_lot"]
 
 [dependencies.reqwest]
-version = "0.11.16"
+version = "0.12.15"
 default-features = false
 features = [
   "rustls-tls-native-roots",
